<resources>
    <string name="app_name">My Application</string>
    <string name="title_home">Home</string>
    <string name="title_dashboard">Dashboard</string>
    <string name="title_notifications">Notifications</string>
    <string name="title_setting">Setting</string>
    <string name="title_tracking">Tracking</string>
    <string name="news_feed">News Feed</string>
    <string name="test_location">Test Location</string>

    <string-array name="cities">
        <item>Not Selected</item>
        <item>Los Angeles City</item>
        <item>Culver City</item>
        <item>Santa Monica</item>
        <item>Beverly Hills</item>
        <item>West Hollywood</item>
    </string-array>

    <string-array name="ringtoneChoices">
        <item>Default Ringtone</item>
        <item>App\'s Notification Sound</item>
    </string-array>

    <string-array name="dataRetentionChoices">
        <item>21</item>
        <item>15</item>
        <item>7</item>
    </string-array>
    
    <string name="start">start</string>
    <string name="about">About</string>

</resources>
