<?xml version="1.0" encoding="utf-8"?>
<navigation xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/mobile_navigation"
    app:startDestination="@+id/navigation_home">

    <fragment
        android:id="@+id/navigation_home"
        android:name="com.example.myapplication.ui.home.HomeFragment"
        android:label="@string/title_home"
        tools:layout="@layout/fragment_home" />


    <fragment
        android:id="@+id/navigation_news"
        android:name="com.example.myapplication.ui.news.NewsFragment"
        android:label="@string/news_feed"
        tools:layout="@layout/fragment_news" />

    <fragment
        android:id="@+id/navigation_test"
        android:name="com.example.myapplication.ui.test.TestFragment"
        android:label="@string/test_location"
        tools:layout="@layout/fragment_test" />

    <fragment
        android:id="@+id/navigation_tracking"
        android:name="com.example.myapplication.ui.tracking.TrackingFragment"
        android:label="@string/title_tracking"
        tools:layout="@layout/fragment_tracking" />

    <fragment
        android:id="@+id/navigation_setting"
        android:name="com.example.myapplication.ui.setting.SettingFragment"
        android:label="@string/title_setting"
        tools:layout="@layout/fragment_setting" />


</navigation>